@startuml Volunteer_Event_Matcher_ERD
!define TABLENAME_COLOR #FFCCCC
!define PRIMARY_KEY_COLOR #FFFF99
!define FOREIGN_KEY_COLOR #CCFFCC

skinparam linetype ortho

entity "users" as users {
    * user_id : SERIAL [PK]
    --
    * username : VARCHAR(50) [UNIQUE]
    * password : VARCHAR(255)
    * role : VARCHAR(20) [ADMIN|HELPER]
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "admin" as admin {
    * admin_id : SERIAL [PK]
    --
    * user_id : INT [FK]
    role_description : VARCHAR(100)
    created_at : TIMESTAMP
}

entity "helper" as helper {
    * helper_id : SERIAL [PK]
    --
    * user_id : INT [FK]
    email : VARCHAR(100)
    phone_number : VARCHAR(20)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "catalog" as catalog {
    * catalog_id : SERIAL [PK]
    --
    name : VARCHAR(100)
    description : TEXT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "event" as event {
    * event_id : SERIAL [PK]
    --
    * catalog_id : INT [FK]
    * admin_id : INT [FK]
    * title : VARCHAR(200)
    description : TEXT
    * event_date : DATE
    event_time : TIME
    * location : VARCHAR(255)
    city : VARCHAR(100)
    latitude : DECIMAL(10,8)
    longitude : DECIMAL(11,8)
    organizer : VARCHAR(100)
    tags : TEXT
    * slots_available : INT
    registered_volunteers : INT
    * status : VARCHAR(20) [OPEN|CLOSED|CANCELLED]
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "event_suggestion" as event_suggestion {
    * suggestion_id : SERIAL [PK]
    --
    * helper_id : INT [FK]
    admin_id : INT [FK]
    * title : VARCHAR(200)
    description : TEXT
    suggested_date : DATE
    suggested_time : TIME
    location : VARCHAR(255)
    city : VARCHAR(100)
    latitude : DECIMAL(10,8)
    longitude : DECIMAL(11,8)
    organizer : VARCHAR(100)
    tags : TEXT
    suggested_slots : INT
    * status : VARCHAR(20) [PENDING|APPROVED|REJECTED]
    rejection_reason : TEXT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "collection" as collection {
    * collection_id : SERIAL [PK]
    --
    * helper_id : INT [FK] [UNIQUE]
    created_at : TIMESTAMP
    last_updated_at : TIMESTAMP
}

entity "volunteer_event" as volunteer_event {
    * volunteer_event_id : SERIAL [PK]
    --
    * event_id : INT [FK]
    * collection_id : INT [FK]
    * status : VARCHAR(20) [INTERESTED|COMMITTED|CANCELLED]
    added_at : TIMESTAMP
    committed_at : TIMESTAMP
}

entity "admin_dashboard" as admin_dashboard {
    * dashboard_id : SERIAL [PK]
    --
    * admin_id : INT [FK] [UNIQUE]
    pending_suggestions_count : INT
    total_events : INT
    total_volunteers : INT
    last_updated_at : TIMESTAMP
}

' Relationships
users ||--o{ admin : "1:1"
users ||--o{ helper : "1:1"

admin ||--o{ event : "manages"
admin ||--o{ event_suggestion : "reviews"
admin ||--|| admin_dashboard : "has"

helper ||--|| collection : "has"
helper ||--o{ event_suggestion : "submits"

catalog ||--o{ event : "contains"

event ||--o{ volunteer_event : "in"
collection ||--o{ volunteer_event : "contains"

@enduml
